[project]
name = "pypi-viewer"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Robin", email = "robinjefferson123@gmail.com"},
]
dependencies = [
    "fastapi[standard]>=0.115.2",
    "httpx>=0.27.2",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
