[project]
name = "pypi-viewer"
version = "0.1.0"
description = "Browse packages and their artifacts uploaded to the Python Package Index"
authors = [
    {name = "Robin", email = "robinjefferson123@gmail.com"},
]
dependencies = [
    "fastapi[standard]>=0.115.2",
    "httpx>=0.27.2",
    "memray>=1.14.0",
    "pydantic-settings>=2.6.0",
    "hypothesis>=6.115.3",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev_dependencies]
lint = ["pre-commit>=4.0.1"]
test = ["pytest>=8.3.3"]

[tool.pdm]
distribution = true

[tool.pdm.scripts]
dev = { shell = "fastapi dev src/pypi_viewer/main.py" }
prod = { shell = "fastapi run src/pypi_viewer/main.py" }
precommit = { shell = "pre-commit run --all-files" }
test = { shell = "pytest tests/" }

[tool.pyright]
include = ["src/**/*.py"]
venvPath = "."
venv = ".venv"
